--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-title: My Website
+title: Jesse-Projects
 
 # Your name to show in the footer
 author: Jesse Saechao
@@ -21,10 +21,9 @@ author: Jesse Saechao
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Projects:
+    - Energy Forecasting: "https://jesse-san.github.io/energy.github.io/"
+  Course Work: "Will Update"
 
 ################
 # --- Logo --- #
@@ -51,7 +50,7 @@ round-avatar: false
 social-network-links:
   email: "someone@example.com"
   rss: true  # remove this line if you don't want to show an RSS link at the bottom
-  facebook: deanattali
+  facebook: https://www.facebook.com/JesseEfeoSaechao
   github: daattali
 #  medium: yourname
 #  reddit: yourname
@@ -76,7 +75,7 @@ social-network-links:
 
 # If you want your website to generate an RSS feed, provide a description
 # The URL for the feed will be https://<your_website>/feed.xml
-rss-description: This website is a virtual proof that I'm awesome
+#rss-description: This website is a virtual proof that I'm awesome
 
 ###########################
 # --- General options --- #
@@ -84,14 +83,14 @@ rss-description: This website is a virtual proof that I'm awesome
 
 # Select which social network share links to show in posts
 share-links-active:
-  twitter: true
-  facebook: true
-  linkedin: true
+  twitter: false
+  facebook: false
+  linkedin: false
   vk: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+#url-pretty: "JesseS.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -244,7 +243,7 @@ date_format: "%B %-d, %Y"
 #################################################################################
 
 # Output options (more information on Jekyll's site)
-timezone: "America/Toronto"
+timezone: "America"
 markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title/
