--- a/_config.yml
+++ b/_config.yml
@@ -259,7 +259,7 @@ defaults:
       path: ""
       type: "posts"
     values:
-      layout: "minimal"
+      layout: "page"
       comments: true  # add comments to all blog posts
       social-share: true # add social media sharing buttons to all blog posts
   -
