--- a/_config.yml
+++ b/_config.yml
@@ -105,7 +105,7 @@ feed_show_tags: false
 post_search: false
 
 # Add a button in the footer to edit the current page. Only works if your website is hosted on GitHub
-edit_page_button: true
+#edit_page_button: true
 
 # Allow sub-menu items (second-level navigation menu items) to be longer than the top-level menu
 # If this setting is off, then long sub-menu words might get cut off
@@ -121,7 +121,7 @@ navbar-var-length: True
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#4682B4"
+navbar-col: "#FFFFFF"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
 page-col: "#FFFFFF"
