--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 ############################
 
 # Name of website
-#title: Jesse-Projects
+title: Home
 
 # Your name to show in the footer
 author: Jesse Saechao
