--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
   Projects:
     - Energy Forecasting: "https://jesse-san.github.io/energy.github.io/"
   Course Notebooks: "Will Update"
+    - McCall Job Search: "https://jesse-san.github.io/McCall/"
 
 ################
 # --- Logo --- #
