--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ navbar-links:
   Projects:
     - Energy Forecasting: "https://jesse-san.github.io/energy.github.io/"
   Course Notebooks:
+    - Markov Matrices: "https://jesse-san.github.io/Markov/"
     - McCall Job Search: "https://jesse-san.github.io/McCall/"
 
 ################
