--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,7 @@ navbar-links:
   Course Notebooks:
     - Markov Matrices: "https://jesse-san.github.io/Markov/"
     - McCall Job Search: "https://jesse-san.github.io/McCall/"
+    - GDP Cycles: "https://jesse-san.github.io/GDPcycles/"
 
 ################
 # --- Logo --- #
