--- a/_config.yml
+++ b/_config.yml
@@ -23,9 +23,10 @@ navbar-links:
   #About Me: "aboutme"
   Projects:
     - Energy Forecasting: "https://jesse-san.github.io/energy.github.io/"
-  Course Notebooks:
+  Dynamic Stochastic Modeling:
     - Markov Matrices: "https://jesse-san.github.io/Markov/"
     - McCall Job Search: "https://jesse-san.github.io/McCall/"
+    - GDP Cycles: "https://jesse-san.github.io/GDPcycles/"
 
 ################
 # --- Logo --- #
