--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,7 @@ navbar-links:
     - Markov Matrices: "https://jesse-san.github.io/Markov/"
     - McCall Job Search: "https://jesse-san.github.io/McCall/"
     - GDP Cycles: "https://jesse-san.github.io/GDPcycles/"
+    - Solow Residuals: "https://jesse-san.github.io/Solow/"
 
 ################
 # --- Logo --- #
