--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ navbar-links:
   #About Me: "aboutme"
   Projects:
     - Energy Forecasting: "https://jesse-san.github.io/energy.github.io/"
+    - Undergraduate Thesis: "https://docs.google.com/document/d/e/2PACX-1vSJD7aKIbNGm36Wg_JqtXLszn-B_sU3fC9rGjesRvvlutqjb_ig_Uyw2kSa7wCw1EoCKB2Lg8htKAD6/pub"
   Dynamic Stochastic Modeling:
     - Markov Matrices: "https://jesse-san.github.io/Markov/"
     - McCall Job Search: "https://jesse-san.github.io/McCall/"
